# keystone-sdk-rust

./: .gitignore  Cargo.toml  Makefile  README.md  URRegistryFFI.podspec  rust-toolchain
libs/ur-parse-lib/: Cargo.toml  README.md
libs/ur-parse-lib/src/: keystone_ur_decoder.rs  keystone_ur_encoder.rs  lib.rs  ur.rs
libs/ur-registry/: Cargo.toml  README.md  build.template.rs
libs/ur-registry-ffi/: Cargo.toml  Makefile  README.md
libs/ur-registry-ffi/src/: lib.rs
libs/ur-registry-ffi/src/aptos/: aptos_sign_request.rs  aptos_signature.rs  mod.rs
libs/ur-registry-ffi/src/arweave/: arweave_account.rs  arweave_sign_request.rs  arweave_signature.rs  mod.rs
libs/ur-registry-ffi/src/bitcoin/: btc_sign_request.rs  btc_signature.rs  crypto_psbt.rs  mod.rs
libs/ur-registry-ffi/src/cardano/: cardano_sign_request.rs  cardano_signature.rs
libs/ur-registry-ffi/src/cosmos/: cosmos_sign_request.rs  cosmos_signature.rs  mod.rs
libs/ur-registry-ffi/src/ergo/: ergo_sign_request.rs  ergo_signed_tx.rs  mod.rs
libs/ur-registry-ffi/src/ethereum/: eth_sign_request.rs  eth_signature.rs  mod.rs
libs/ur-registry-ffi/src/evm/: evm_sign_request.rs  evm_signature.rs  mod.rs
libs/ur-registry-ffi/src/export/: mod.rs
libs/ur-registry-ffi/src/export/android/: arg.rs  ret.rs
libs/ur-registry-ffi/src/extend/: crypto_hd_key.rs  crypto_multi_accounts.rs  mod.rs
libs/ur-registry-ffi/src/kaspa/: kaspa_pskt.rs  mod.rs
libs/ur-registry-ffi/src/keystone/: keystone_sign_request.rs  keystone_sign_result.rs  keystone_tx_transfer.rs  mod.rs  supported_coins.rs
libs/ur-registry-ffi/src/near/: near_sign_request.rs  near_signature.rs
libs/ur-registry-ffi/src/solana/: mod.rs  sol_sign_request.rs  sol_signarure.rs  sol_signature.rs  solana_sign_request.rs
libs/ur-registry-ffi/src/stellar/: stellar_sign_request.rs  stellar_signature.rs
libs/ur-registry-ffi/src/sui/: sui_sign_request.rs  sui_signature.rs
libs/ur-registry-ffi/src/sync/: crypto_account.rs  crypto_hd_key.rs  crypto_multi_accounts.rs  mod.rs
libs/ur-registry-ffi/src/ton/: mod.rs  ton_sign_request.rs  ton_signature.rs
libs/ur-registry-ffi/src/tron/: mod.rs  tron_sign_request.rs  tron_signature.rs  tron_transfer.rs
libs/ur-registry-ffi/src/util/: chain.rs
libs/ur-registry-ffi/src/util_internal/: account_helper.rs  chain.rs  mod.rs  string_helper.rs
libs/ur-registry-ffi/src/utils/: crypto.rs  hd_path.rs  mod.rs
libs/ur-registry-ffi/src/utxo/: mod.rs  utxo_sign_request.rs  utxo_sign_result.rs  utxo_transfer.rs
libs/ur-registry-ffi/src/xrp/: mod.rs  xrp_account.rs  xrp_sign_request.rs  xrp_signature.rs
libs/ur-registry-ffi/src/zcash/: mod.rs  zcash_accounts.rs  zcash_pczt.rs
libs/ur-registry/proto/: doge_transaction.proto  transaction.proto
libs/ur-registry/src/: bytes.rs  cbor.rs  crypto_account.rs  crypto_coin_info.rs  crypto_ec_key.rs  crypto_hd_key.rs  crypto_key_path.rs  crypto_output.rs  crypto_psbt.rs  crypto_psbt_extend.rs  error.rs  lib.rs  macros.rs  macros_impl.rs  multi_key.rs  registry_types.rs  script_expression.rs  traits.rs  types.rs
libs/ur-registry/src/aptos/: aptos_sign_request.rs  aptos_signature.rs
libs/ur-registry/src/arweave/: arweave_crypto_account.rs  arweave_sign_request.rs  arweave_signature.rs  mod.rs
libs/ur-registry/src/avalanche/: avax_sign_request.rs  avax_signature.rs  avax_utxo.rs  mod.rs
libs/ur-registry/src/bitcoin/: btc_sign_request.rs  btc_signature.rs
libs/ur-registry/src/btc/: btc_sign_request.rs  btc_signature.rs  mod.rs
libs/ur-registry/src/cardano/: cardano_catalyst_signature.rs  cardano_catalyst_voting_registration.rs  cardano_cert_key.rs  cardano_delegation.rs  cardano_sign_cip8_data_request.rs  cardano_sign_cip8_data_signature.rs  cardano_sign_data_request.rs  cardano_sign_data_signature.rs  cardano_sign_request.rs  cardano_sign_structure.rs  cardano_sign_tx_hash_request.rs  cardano_signature.rs  cardano_utxo.rs  governance.rs  mod.rs
libs/ur-registry/src/cosmos/: cosmos_sign_request.rs  cosmos_signature.rs  evm_sign_request.rs  evm_signature.rs  mod.rs
libs/ur-registry/src/ergo/: ergo_sign_request.rs  ergo_signature.rs  ergo_signed_tx.rs  ergo_unspent_box.rs  mod.rs
libs/ur-registry/src/ethereum/: eth_batch_sign_requests.rs  eth_batch_signature.rs  eth_sign_request.rs  eth_signature.rs  mod.rs
libs/ur-registry/src/extend/: chain_type.rs  crypto_multi_accounts.rs  derive_context_hash_call.rs  key_derivation.rs  key_derivation_schema.rs  mod.rs  qr_hardware_call.rs
libs/ur-registry/src/icp/: icp_sign_request.rs  icp_signature.rs  mod.rs
libs/ur-registry/src/iota/: iota_sign_hash_request.rs  iota_sign_request.rs  iota_signature.rs  mod.rs
libs/ur-registry/src/kaspa/: kaspa_pskt.rs
libs/ur-registry/src/keystone/: keystone_sign_request.rs  keystone_sign_result.rs  mod.rs
libs/ur-registry/src/monero/: mod.rs  xmr_keyimage.rs  xmr_output.rs  xmr_txsigned.rs  xmr_txunsigned.rs
libs/ur-registry/src/near/: mod.rs  near_sign_request.rs  near_signature.rs
libs/ur-registry/src/pb/: mod.rs  protobuf_parser.rs  protoc.rs
libs/ur-registry/src/solana/: sol_sign_request.rs  sol_signature.rs
libs/ur-registry/src/stellar/: mod.rs  stellar_sign_request.rs  stellar_signature.rs
libs/ur-registry/src/sui/: mod.rs  sui_sign_hash_request.rs  sui_sign_request.rs  sui_signature.rs
libs/ur-registry/src/ton/: mod.rs  ton_sign_request.rs  ton_signature.rs
libs/ur-registry/src/tron/: mod.rs  tron_sign_request.rs  tron_signature.rs
libs/ur-registry/src/utxo/: mod.rs  utxo_sign_request.rs  utxo_sign_result.rs
libs/ur-registry/src/xrp/: mod.rs  xrp_batch_sign_request.rs  xrp_batch_signature.rs
libs/ur-registry/src/zcash/: cbor_helpers.rs  mod.rs  zcash_accounts.rs  zcash_batch_sig_result.rs  zcash_full_viewing_key.rs  zcash_pczt.rs  zcash_sign_batch.rs  zcash_sign_result.rs  zcash_unified_full_viewing_key.rs
(+10 files in other folders)
