[package]
name = "ur-parse-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ur-registry = { path = "../ur-registry" }
ur = { git = "https://github.com/KeystoneHQ/ur-rs", branch = "release-0.3.0-no-std", default-features = false }
#libc-print = "0.1.21"
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
