[package]
name = "ur-parse-lib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ur-registry = { path = "../ur-registry" }
ur = { path = "../../../ur-rs", default-features = false}
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
