[package]
name = "ur-parse-lib"
version = "1.0.4"
edition = "2024"
description = "UR parsing and encoding helpers built on Keystone UR registry"
license = "MIT"
repository = "https://github.com/KeystoneHQ/keystone-sdk-rust"
homepage = "https://github.com/KeystoneHQ/keystone-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ur-registry = { path = "../ur-registry", version = "1.0.3", default-features = false, features = ["core"] }
ur = { package = "keystone-ur", version = "0.1.0", default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }

[features]
default = ["core"]
core = ["ur-registry/core"]
std = ["ur-registry/std"]
