[package]
name = "ur-registry-ffi"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ur = { git = "https://github.com/KeystoneHQ/ur-rs", branch = "master" }
ur-registry = { path = "../ur-registry" }
serde_cbor = "0.11.2"
hex = "0.4.3"
ffi-support = "0.4"
anyhow = "1.0"
libc = "0.2"
jni = { version = "0.16.0", optional = true }
serde_json = "1.0"
uuid = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "ur_registry_ffi"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["jni"]
