[package]
name = "ur-registry"
version = "1.0.6"
edition = "2024"
description = "Keystone UR registry types and encoders/decoders for multi-chain payloads"
license = "MIT"
repository = "https://github.com/KeystoneHQ/keystone-sdk-rust"
homepage = "https://github.com/KeystoneHQ/keystone-sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ur = { package = "keystone-ur", version = "0.1.0", default-features = false }
minicbor = { version = "0.19", features = ["alloc"] }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
bs58 = { version = "0.5.1", features = [
    'check',
    "alloc",
], default-features = false }
thiserror = { version = "1.0", optional = true }
thiserror-core = { version = "1.0", package = "thiserror-core", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }

prost = { version = "0.11.8", default-features = false }
prost-types = { version = "0.11.8", default-features = false }
libflate = { version = "=2.2.2", default-features = false }
no_std_io2 = { version = "0.9", default-features = false, features = ["alloc"] }
paste = "1.0.12"

[features]
default = ["core"]
core = ["dep:thiserror-core"]
std = ["dep:thiserror", "thiserror-core?/std"]

[build-dependencies]
prost-build = { version = "0.11.8" }

[dev-dependencies]
base64 = { version = "0.22.1" }
